charts/be-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: backend
status:
  loadBalancer: {}
