charts/fe-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend-deploy
  name: frontend-deploy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-deploy
status:
  loadBalancer: {}
